WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272030
[WPE] Fix build failure after
273995@main
https://bugs.webkit.org/show_bug.cgi?id=272030
Summary
[WPE] Fix build failure after 273995@main
Patrick Griffis
Reported
2024-04-02 07:25:43 PDT
This moved some classes from the WebKit to WebCore namespace.
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2024-04-02 07:26:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26722
EWS
Comment 2
2024-04-02 09:16:37 PDT
Committed
276937@main
(10960413a084): <
https://commits.webkit.org/276937@main
> Reviewed commits have been landed. Closing PR #26722 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug