Cherry-pick 276937@main (10960413a084). https://bugs.webkit.org/show_bug.cgi?id=272030

[WPE] Fix build failure after 273995@main
    https://bugs.webkit.org/show_bug.cgi?id=272030

    Reviewed by Adrian Perez de Castro.

    This moved some classes from the WebKit to WebCore namespace.

    * Source/WebKit/UIProcess/wpe/AcceleratedBackingStoreDMABuf.cpp:
    (WebKit::AcceleratedBackingStoreDMABuf::didCreateBufferSHM):

    Canonical link: https://commits.webkit.org/276937@main

Canonical link: https://commits.webkit.org/274313.397@webkitglib/2.44